# Socket-Programming

./: .gitignore
Assignment/Documentation/: Socket Programming.aux  Socket Programming.bbl  Socket Programming.blg  Socket Programming.fdb_latexmk  Socket Programming.fls  Socket Programming.out  Socket Programming.tex  Socket Programming.toc  ref.bib
Assignment/Libraries/: INet4Address.cpp  INet4Address.h  TimsINet4Address.h
Assignment/Server/: CMakeLists.txt  Dockerfile  a.out  compile.sh  docker-compose.yml  main.cpp
Assignment/Server/Game/: ConnectedPlayer.cpp  GameLogic.cpp  GameLogic.h  RPSNetwork.cpp  RPSNetwork.h
Assignment/Server/Lobby/: Lobby.cpp  Lobby.h
Assignment/Server/MessageTools/: StateHandler.cpp  smt.h
Assignment/Server/MessageTools/Messages/: AcceptMessage.cpp  ActionMessage.cpp  ConnectMessage.cpp  GamePhaseMessage.cpp  RefuseMessage.cpp  UpdateMessage.cpp  messages.h
Assignment/Server/NetworkTools/: Connection.cpp  ConnectionInstance.cpp  ServerConnection.cpp  snt.h
Assignment/SocialRPS/: settings.gradle
Assignment/SocialRPS/app/: build.gradle
Assignment/SocialRPS/app/src/main/cpp/: CMakeLists.txt
Assignment/SocialRPS/app/src/main/cpp/ClientLibraries/MessageTools/: StateHandler.cpp  smt.h
Assignment/SocialRPS/app/src/main/cpp/ClientLibraries/MessageTools/Messages/: DisconnectMessage.cpp  GamePhaseMessage.cpp  GameStateMessage.cpp  messages.h
Assignment/SocialRPS/app/src/main/cpp/ClientLibraries/NetworkTools/: ClientConnection.cpp  Connection.cpp  ConnectionInstance.cpp  cnt.h
Assignment/SocialRPS/app/src/main/cpp/GameActivity/: GameActivity.cpp  GameActivity.h  comsGameActivity.cpp
Assignment/SocialRPS/app/src/main/cpp/NetworkManager/: Configuration.h  INet4Address.cpp  INet4Address.h  NetworkTest.cpp  NetworkTools.h
Assignment/SocialRPS/gradle/wrapper/: gradle-wrapper.properties
Practice/WS-3/: WS-3.sln
Practice/WS-3/WS-3/: WS-3.vcxproj  main.cpp
Templates/: variadic.cpp
Templates/Thread_Templates/: a.out  threads.cpp
Templates/TicTacToeNetwork/Client/: CMakeLists.txt
Templates/TicTacToeNetwork/Client/TicTacToeGame/: AcceptMessage.cpp  AcceptMessage.h  ClientConnection.h  ConnectMessage.cpp  Connection.cpp  Connection.h  ConnectionInstance.cpp  ConnectionInstance.h  DisconnectMessage.cpp  DisconnectMessage.h  GameState.cpp  GridUpdate.cpp  GridUpdate.h  MakeMove.h  Message.cpp  RejectMessage.cpp  RequestUpdate.cpp  Source.cpp  TicTacToeGame.vcxproj  TicTacToeGame.vcxproj.filters  TicTacToeNetworkClient.cpp  TicTacToeNetworkClient.h
Templates/TicTacToeNetwork/Server/: TicTacToeGame.sln
Templates/TicTacToeNetwork/Server/TicTacToeGame/: AcceptMessage.cpp  ClientConnection.cpp  ConnectMessage.h  ConnectedPlayer.cpp  ConnectedPlayer.h  GameState.h  GridUpdate.cpp  GridUpdate.h  INet4Address.h  Lobby.cpp  Lobby.h  MakeMove.cpp  Message.h  Messages.h  RejectMessage.cpp  RejectMessage.h  RequestUpdate.h  Source.cpp  TicTacToe.cpp  TicTacToe.h  TicTacToeGame.vcxproj  TicTacToeGame.vcxproj.filters  TicTacToeNetwork.cpp  TicTacToeNetwork.h
Tutorial/SCPP-Lambdas/: SCPP-Lambdas.sln
Tutorial/SCPP-Lambdas/SCPP-Lambdas/: SCPP-Lambdas.vcxproj  main.cpp
Tutorial/SCPP-Lambdas/SCPP-Lambdas/Debug/: SCPP-Lambdas.exe.recipe  SCPP-Lambdas.ilk  vc142.idb
Tutorial/SPCC-1/: SPCC-1.sln
Tutorial/SPCC-1/SPCC-1/: SPCC-1.vcxproj  main.cpp
Tutorial/SPCC-1/SPCC-1/Debug/: SPCC-1.exe.recipe  SPCC-1.ilk  main.obj.enc  vc142.idb
Tutorial/SPCC-2/: SPCC-2.sln
Tutorial/SPCC-2/SPCC-2/: SPCC-2.vcxproj  main.cpp
Tutorial/SPCC-2/SPCC-2/Debug/: SPCC-2.exe.recipe  SPCC-2.ilk  main.obj.enc  vc142.idb
Tutorial/SPCC-3/: SPCC-3.sln
Tutorial/SPCC-3/SPCC-3/: Directions.h  SPCC-3.vcxproj  SPCC-3.vcxproj.filters  main.cpp
Tutorial/SPCC-3/SPCC-3/Debug/: SPCC-3.exe.recipe  SPCC-3.ilk  vc142.idb
Tutorial/SPCC-4/: SPCC-4.sln
Tutorial/SPCC-4/SPCC-4/: SPCC-4.vcxproj  main.cpp
Tutorial/SPCC-5/: SPCC-5.sln
Tutorial/SPCC-5/SPCC-5/: SPCC-5.vcxproj  main.cpp
Tutorial/SPCC-6/: SPCC-6.sln
Tutorial/SPCC-6/SPCC-6/: INet4Address.cpp  INet4Address.h  SPCC-6.vcxproj  SPCC-6.vcxproj.filters  a.out  main.cpp
Tutorial/SPCC-7/Client/: a.out  main.cpp
Tutorial/SPCC-7/Libraries/: INet4Address.cpp  INet4Address.h  TimsINet4Address.cpp
Tutorial/SPCC-7/Server/: a.out  main.cpp
Tutorial/SPCC-8/: Circle.cpp  Shapes.h  main.cpp
Tutorial/SPCC-8/Client/: Client.sln
Tutorial/SPCC-8/Client/Client/: Circle.cpp  Circle.h  Client.vcxproj  Client.vcxproj.filters  Connection.cpp  Connection.h  ConnectionInstance.cpp  ConnectionInstance.h  INet4Address.cpp  Rectangle.cpp  Rectangle.h  ServerConnection.cpp  Shape.cpp  Shape.h  Source.cpp
Tutorial/SPCC-8/Libraries/: INet4Address.h  TimsINet4Address.h
Tutorial/SPCC-8/Server/: Server.sln
Tutorial/SPCC-8/Server/Server/: Circle.cpp  ClientConnection.cpp  ClientConnection.h  Connection.cpp  ConnectionInstance.h  Main.cpp  Server.vcxproj  Server.vcxproj.filters  ServerConnection.cpp  (+2 more)
Webpages/: Android chat tutorial_ How to build a messaging UI - Sendbird.mhtml
(+41 files in other folders)
